# receipt-uploader

./: .env.example  .gitignore  app.py  image_reader.py  main.py  pdf_ai.py  pdf_reader.py  pyproject.toml  sheets_test.py
