[project]
name = "receipt-uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "gspread>=6.2.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.ruff]
# Enable linting rules for pyflakes (F), pycodestyle (E, W), and isort (I)
select = ["E", "F", "W", "I"]
line-length = 120

[tool.ruff.lint.isort]
# This makes it behave exactly like the popular 'isort' package
combine-as-imports = true
lines-after-imports = 2